--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,8 @@
     "browserify": "^17.0.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
-    "node-fetch": "^2.6.1",
-    "qs": "^6.5.2"
+    "node-fetch": "^2.6.6",
+    "qs": "^6.5.2",
+    "requirejs": "^2.3.6"
   }
 }
