--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "knex": "0.21.18",
     "node-fetch": "^2.6.1",
     "pg": "^8.7.1",
+    "pg-connection-string": "^2.4.0",
     "sqlite3": "5.0.0",
     "strapi": "3.6.8",
     "strapi-admin": "3.6.8",
@@ -22,6 +23,7 @@
     "strapi-plugin-email": "3.6.8",
     "strapi-plugin-graphql": "^3.6.8",
     "strapi-plugin-i18n": "3.6.8",
+    "strapi-plugin-import-export-content": "^0.4.2",
     "strapi-plugin-upload": "3.6.8",
     "strapi-plugin-users-permissions": "3.6.8",
     "strapi-utils": "3.6.8"
